@@ -114,8 +114,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <annotationProcessorPaths>
                         <!-- Lombok -->
                         <path>
@@ -137,6 +137,7 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
                         <compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
                         <compilerArg>-Amapstruct.verbose=true</compilerArg>
                     </compilerArgs>
